k8s/github-push-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-push-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-push-test
  template:
    metadata:
      labels:
        app: github-push-test
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: github-push-test
          image: ghcr.io/marcelphilippeandrade/github-push-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
