k8s/github-push-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: github-push-test-ingress

spec:
  rules:
    - host: github-push-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-push-test
                port:
                  number: 80
